force-app/main/default/objects/os_Request__c/fields/os_gsir_user_full_name__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_user_full_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalAgent</relationshipName>
    <type>Lookup</type>
</CustomField>