force-app/main/default/objects/os_Request__c/fields/os_HeatType__c.field-meta.xml
<CustomField>
    <fullName>os_HeatType__c</fullName>
    <label>Heat Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>