force-app/main/default/objects/os_Request__c/fields/os_Historic__c.field-meta.xml
<CustomField>
    <fullName>os_Historic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historic</label>
    <type>Checkbox</type>
</CustomField>