force-app/main/default/objects/os_Request__c/fields/os_HOAFeesMin__c.field-meta.xml
<CustomField>
    <fullName>os_HOAFeesMin__c</fullName>
    <label>HOA Fees Min</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>