force-app/main/default/objects/os_Request__c/fields/os_HomeownerConfirmed_pb__c.field-meta.xml
<CustomField>
    <fullName>os_HomeownerConfirmed_pb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homeowner Confirmed</label>
    <type>Checkbox</type>
</CustomField>