force-app/main/default/objects/os_Request__c/fields/os_IncludesOpenHouseChanges_pb__c.field-meta.xml
<CustomField>
    <fullName>os_IncludesOpenHouseChanges_pb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Open House Changes</label>
    <type>Checkbox</type>
</CustomField>