force-app/main/default/objects/os_Request__c/fields/os_IncludesStatusChanges_pb__c.field-meta.xml
<CustomField>
    <fullName>os_IncludesStatusChanges_pb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Status Changes</label>
    <type>Checkbox</type>
</CustomField>