force-app/main/default/objects/os_Request__c/fields/os_Inquiry_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry 18 Digit Id</label>
    <type>Text</type>
</CustomField>