force-app/main/default/objects/os_Request__c/fields/os_Inquiry_is_Irrelevant__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry_is_Irrelevant__c</fullName>
    <label>Inquiry is Irrelevant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non Focus Area</fullName>
            </value>
            <value>
                <fullName>Budget too Low</fullName>
            </value>
            <value>
                <fullName>Incomplete contact details</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Wrong email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>