force-app/main/default/objects/os_Request__c/fields/os_Inquiry_is_Spam__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry_is_Spam__c</fullName>
    <label>Inquiry is Spam</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phishing</fullName>
            </value>
            <value>
                <fullName>Window Shopping</fullName>
            </value>
            <value>
                <fullName>Incorrect or Missing Contract Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>