force-app/main/default/objects/os_Request__c/fields/os_Inquiry_Lost_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry_Lost_Reason_Details__c</fullName>
    <label>Inquiry Lost Reason Details</label>
    <type>TextArea</type>
</CustomField>