force-app/main/default/objects/os_Request__c/fields/os_Inquiry_Price_GBP__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry_Price_GBP__c</fullName>
    <label>Inquiry Price GBP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>