force-app/main/default/objects/os_Request__c/fields/os_Inquiry_Price_SAR__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry_Price_SAR__c</fullName>
    <label>Inquiry Price SAR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>