force-app/main/default/objects/os_Request__c/fields/os_Inquiry_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry_Transaction_Type__c</fullName>
    <formula>os_Listing__r.os_Transaction_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry Transaction Type</label>
    <type>Text</type>
</CustomField>