force-app/main/default/objects/os_Request__c/fields/os_Int_l_Referral_Agent_Contact__c.field-meta.xml
<CustomField>
    <fullName>os_Int_l_Referral_Agent_Contact__c</fullName>
    <label>Int&apos;l Referral Agent Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>