force-app/main/default/objects/os_Request__c/fields/os_Int_l_Referral_Agent_email__c.field-meta.xml
<CustomField>
    <fullName>os_Int_l_Referral_Agent_email__c</fullName>
    <label>Int&apos;l Referral Agent email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>