force-app/main/default/objects/os_Request__c/fields/os_Int_l_Referral_Remarks__c.field-meta.xml
<CustomField>
    <fullName>os_Int_l_Referral_Remarks__c</fullName>
    <label>Int&apos;l Referral Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>