force-app/main/default/objects/os_Request__c/fields/os_International_Agency_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>os_International_Agency_Agent_Email__c</fullName>
    <label>International Agency Agent Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>