force-app/main/default/objects/os_Request__c/fields/os_International_Referral__c.field-meta.xml
<CustomField>
    <fullName>os_International_Referral__c</fullName>
    <label>International Referral</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Sales</fullName>
            </value>
            <value>
                <fullName>Inbound Rentals</fullName>
            </value>
            <value>
                <fullName>Outbound Sales</fullName>
            </value>
            <value>
                <fullName>Outbound Rentals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>