force-app/main/default/objects/os_Request__c/fields/os_International_Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>os_International_Referral_Status__c</fullName>
    <label>International Referral Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referral is active</fullName>
            </value>
            <value>
                <fullName>Referral Cancelled</fullName>
            </value>
            <value>
                <fullName>Referral on Hold</fullName>
            </value>
            <value>
                <fullName>Transaction in Pipeline</fullName>
            </value>
            <value>
                <fullName>Successful Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>