force-app/main/default/objects/os_Request__c/fields/os_Is_Login_User_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>os_Is_Login_User_Call_Center__c</fullName>
    <formula>IF( $User.Id =  os_User_Generated_Inquiry__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Login User Call Center?</label>
    <type>Checkbox</type>
</CustomField>