force-app/main/default/objects/os_Request__c/fields/os_IsWebsiteSavedSearch__c.field-meta.xml
<CustomField>
    <fullName>os_IsWebsiteSavedSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Website Saved Search</label>
    <type>Checkbox</type>
</CustomField>