force-app/main/default/objects/os_Request__c/fields/os_Last_Activity_Log_Call__c.field-meta.xml
<CustomField>
    <fullName>os_Last_Activity_Log_Call__c</fullName>
    <label>Last Activity Log Call</label>
    <type>DateTime</type>
</CustomField>