force-app/main/default/objects/os_Request__c/fields/os_Last_Activity_Logged_by_Agent__c.field-meta.xml
<CustomField>
    <fullName>os_Last_Activity_Logged_by_Agent__c</fullName>
    <label>Last Activity Logged by Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>