force-app/main/default/objects/os_Request__c/fields/os_Last_Agent_Activity__c.field-meta.xml
<CustomField>
    <fullName>os_Last_Agent_Activity__c</fullName>
    <label>Last Agent Activity</label>
    <type>Date</type>
</CustomField>