force-app/main/default/objects/os_Request__c/fields/os_Last_Assigned__c.field-meta.xml
<CustomField>
    <fullName>os_Last_Assigned__c</fullName>
    <label>Last Assigned</label>
    <type>DateTime</type>
</CustomField>