force-app/main/default/objects/os_Request__c/fields/os_Last_Call_Centre_Activity__c.field-meta.xml
<CustomField>
    <fullName>os_Last_Call_Centre_Activity__c</fullName>
    <label>Last Call Centre Activity</label>
    <type>DateTime</type>
</CustomField>