force-app/main/default/objects/os_Request__c/fields/os_Last_Call_Centre_Outcome__c.field-meta.xml
<CustomField>
    <fullName>os_Last_Call_Centre_Outcome__c</fullName>
    <label>Last Call Centre Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>