force-app/main/default/objects/os_Request__c/fields/os_Last_Logged_Activity_By__c.field-meta.xml
<CustomField>
    <fullName>os_Last_Logged_Activity_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Logged Activity By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastLoggedActivityBy</relationshipName>
    <type>Lookup</type>
</CustomField>