force-app/main/default/objects/os_Request__c/fields/os_Last_Seven_Days__c.field-meta.xml
<CustomField>
    <fullName>os_Last_Seven_Days__c</fullName>
    <formula>Today()-7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Seven Days</label>
    <type>Date</type>
</CustomField>