force-app/main/default/objects/os_Request__c/fields/os_LastActivityLoggedOn__c.field-meta.xml
<CustomField>
    <fullName>os_LastActivityLoggedOn__c</fullName>
    <label>LastActivityLoggedOn</label>
    <type>DateTime</type>
</CustomField>