force-app/main/default/objects/os_Request__c/fields/os_Latest_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>os_Latest_UTM_Campaign__c</fullName>
    <label>Latest UTM Campaign</label>
    <length>80</length>
    <type>Text</type>
</CustomField>