force-app/main/default/objects/os_Request__c/fields/os_Lead_Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>os_Lead_Source_Channel__c</fullName>
    <label>Lead Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Blogs</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>DataSource</fullName>
            </value>
            <value>
                <fullName>Display Dynamic rmkt</fullName>
            </value>
            <value>
                <fullName>EDM</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Instapage</fullName>
            </value>
            <value>
                <fullName>Lead farming</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>One zaabeel residences display</fullName>
            </value>
            <value>
                <fullName>One zaabeel residences search</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Signboard</fullName>
            </value>
            <value>
                <fullName>SMS Campaign</fullName>
            </value>
            <value>
                <fullName>Website Organic</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Linkedin Organic</fullName>
            </value>
            <value>
                <fullName>Linkedin Ads</fullName>
            </value>
            <value>
                <fullName>Twitter Organic</fullName>
            </value>
            <value>
                <fullName>Twitter Ads</fullName>
            </value>
            <value>
                <fullName>Facebook Organic</fullName>
            </value>
            <value>
                <fullName>Facebook Ads</fullName>
            </value>
            <value>
                <fullName>Instagram Organic</fullName>
            </value>
            <value>
                <fullName>Instagram Ads</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>