force-app/main/default/objects/os_Request__c/fields/os_LeadName__c.field-meta.xml
<CustomField>
    <fullName>os_LeadName__c</fullName>
    <label>Name Of The Associated Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>