force-app/main/default/objects/os_Request__c/fields/os_LengthOfResidenceInHome_pb__c.field-meta.xml
<CustomField>
    <fullName>os_LengthOfResidenceInHome_pb__c</fullName>
    <label>Length of Residence in Home (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>