force-app/main/default/objects/os_Request__c/fields/os_Listing__c.field-meta.xml
<CustomField>
    <fullName>os_Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Inquiry Listing</label>
    <referenceTo>os_Listing__c</referenceTo>
    <relationshipName>InitialInquiryListing</relationshipName>
    <type>Lookup</type>
</CustomField>