force-app/main/default/objects/os_Request__c/fields/os_Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agent__c</fullName>
    <label>Listing Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>