force-app/main/default/objects/os_Request__c/fields/os_Listing_Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Completion_Status__c</fullName>
    <formula>text( os_Listing__r.os_uaefields_Completion_Status__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Completion Status</label>
    <type>Text</type>
</CustomField>