force-app/main/default/objects/os_Request__c/fields/os_Listing_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Full_Address__c</fullName>
    <formula>If ( ISPICKVAL( os_Listing__r.os_Sharing_Rule__c , &apos;United Kingdom SIR&apos;) ,  os_Listing__r.os_Address__c  , os_Listing__r.os_Propertyfinder_Region__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Full Address</label>
    <type>Text</type>
</CustomField>