force-app/main/default/objects/os_Request__c/fields/os_Listing_Mandate__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Mandate__c</fullName>
    <formula>text(os_Listing__r.os_gsir_Mandate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Mandate</label>
    <type>Text</type>
</CustomField>