force-app/main/default/objects/os_Request__c/fields/os_Listing_Off_Plan_Developer__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Off_Plan_Developer__c</fullName>
    <formula>text( os_Listing__r.Offplan_Developer__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Off Plan Developer</label>
    <type>Text</type>
</CustomField>