force-app/main/default/objects/os_Request__c/fields/os_Listing_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Unit_Number__c</fullName>
    <formula>os_Listing__r.os_Unit_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Unit Number</label>
    <type>Text</type>
</CustomField>