force-app/main/default/objects/os_Request__c/fields/os_ListingAgentName_pb__c.field-meta.xml
<CustomField>
    <fullName>os_ListingAgentName_pb__c</fullName>
    <label>Listing Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>