force-app/main/default/objects/os_Request__c/fields/os_ListingOffice__c.field-meta.xml
<CustomField>
    <fullName>os_ListingOffice__c</fullName>
    <label>Listing Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>