force-app/main/default/objects/os_Request__c/fields/os_ListingPrice_pb_max__c.field-meta.xml
<CustomField>
    <fullName>os_ListingPrice_pb_max__c</fullName>
    <label>Price - max</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>