force-app/main/default/objects/os_Request__c/fields/os_ListingType__c.field-meta.xml
<CustomField>
    <fullName>os_ListingType__c</fullName>
    <label>Listing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Short-Term Rentals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>