force-app/main/default/objects/os_Request__c/fields/os_Location_Preference__c.field-meta.xml
<CustomField>
    <fullName>os_Location_Preference__c</fullName>
    <label>Location Preference</label>
    <type>TextArea</type>
</CustomField>