force-app/main/default/objects/os_Request__c/fields/os_LocationKeywords__c.field-meta.xml
<CustomField>
    <fullName>os_LocationKeywords__c</fullName>
    <label>Location Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>