force-app/main/default/objects/os_Request__c/fields/os_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>os_Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget too Low</fullName>
            </value>
            <value>
                <fullName>Closed by Admin (Job Seekers, Telemarketing, RE Brokers)</fullName>
            </value>
            <value>
                <fullName>Closing is Lost</fullName>
            </value>
            <value>
                <fullName>Deal Fell off</fullName>
            </value>
            <value>
                <fullName>Incomplete contact details</fullName>
            </value>
            <value>
                <fullName>Incorrect or Missing Contract Information</fullName>
            </value>
            <value>
                <fullName>Irrelevant</fullName>
            </value>
            <value>
                <fullName>Mortgage not Approved</fullName>
            </value>
            <value>
                <fullName>Non Focus Area</fullName>
            </value>
            <value>
                <fullName>Not contactable- Several attempts made</fullName>
            </value>
            <value>
                <fullName>Not Interested to Buy or Rent property</fullName>
            </value>
            <value>
                <fullName>Not Serious</fullName>
            </value>
            <value>
                <fullName>Phishing</fullName>
            </value>
            <value>
                <fullName>Property match not available</fullName>
            </value>
            <value>
                <fullName>Purchased through other Agency</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Window Shopping</fullName>
            </value>
            <value>
                <fullName>Wrong email</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Was Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>ATR Briefing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>