force-app/main/default/objects/os_Request__c/fields/os_LXT_CONTACT_ID__c.field-meta.xml
<CustomField>
    <fullName>os_LXT_CONTACT_ID__c</fullName>
    <label>LXT_CONTACT_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>