force-app/main/default/objects/os_Request__c/fields/os_Manually_Set_Criteria__c.field-meta.xml
<CustomField>
    <fullName>os_Manually_Set_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Set Criteria</label>
    <type>Checkbox</type>
</CustomField>