force-app/main/default/objects/os_Request__c/fields/os_Mass_Update__c.field-meta.xml
<CustomField>
    <fullName>os_Mass_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Update</label>
    <type>Checkbox</type>
</CustomField>