force-app/main/default/objects/os_Request__c/fields/os_Message__c.field-meta.xml
<CustomField>
    <fullName>os_Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>