force-app/main/default/objects/os_Request__c/fields/os_MLS_ID__c.field-meta.xml
<CustomField>
    <fullName>os_MLS_ID__c</fullName>
    <label>MLS ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>