force-app/main/default/objects/os_Request__c/fields/os_MlsId__c.field-meta.xml
<CustomField>
    <fullName>os_MlsId__c</fullName>
    <label>MLS ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>