force-app/main/default/objects/os_Request__c/fields/os_MonthlyRentMin_pb__c.field-meta.xml
<CustomField>
    <fullName>os_MonthlyRentMin_pb__c</fullName>
    <label>Monthly Rent - min</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>