force-app/main/default/objects/os_Request__c/fields/os_MortgageDate_pb__c.field-meta.xml
<CustomField>
    <fullName>os_MortgageDate_pb__c</fullName>
    <label>Mortgage Date</label>
    <type>Date</type>
</CustomField>